# Electric_Load_Predictor

./: .env.example  .gitignore  DEMO_WITHOUT_DATABASE.md  Electrical_Load_Predictor_Idea.md  LEARNING_SUMMARY.md  Makefile  QUICK_DEMO_NO_ENV.md  README.md  SETUP_WINDOWS_CONDA.md  environment.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: validate-logs.yml
Documentation/: FILE_INDEX.md
Documentation/Ideation/: Electrical_Load_Predictor_Idea.md
Documentation/Protocols/: analysis_sub_protocol.md  generation_sub_protocol.md  logging_sub_protocol.md  master_log.md  master_plan.md  master_protocol.md  planning_sub_protocol.md  reference_material_identification_sub_protocol.md  research_sub_protocol.md  tool_and_reference_material_request_sub_protocol.md  tool_identification_sub_protocol.md
Documentation/logs/: README.md  phase0-phase1-review-2025-11-03.md  phase1-phase2-implementation-2025-11-03.md  phase2-completion-2025-11-03.md  phase3-completion-2025-11-03.md  phase4-completion-2025-11-03.md  restart-protocol-2025-11-03-final.md  restart-session-2025-11-03.md  sample-plan-2025-11-03.md
docker/: README.md  docker-compose.yml
docker/postgres/initdb/: init_extensions.sql
features/: README.md  __init__.py  engineer.py
ingestion/: README.md  __init__.py  data_quality.py  etl.py  fetch_uci.py
scripts/: analyze_data.py  test_ingestion.py  validate_features.py  validate_logs.py
training/: README.md  __init__.py  requirements.txt  train_models.py
