[project]
name = "voltedge"
version = "0.1.0"
description = "VoltEdge Electric Load Predictor — end-to-end forecasting + RAG system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.22",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pgvector>=0.2.0",
  "mlflow>=2.0",
  "python-dotenv>=1.0",
  "pytest>=7.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "redis>=4.5",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.0",
  "pytest-cov>=4.0",
  "pytest-asyncio>=0.21",
]

[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"
